# SPDX-FileCopyrightText: 2026 Eli Array Minkoff
#
# SPDX-License-Identifier: 0BSD

[workspace]
resolver = "3"
members = ["ial", "ial-as", "ial-ast", "ial-cli", "ial-cli-helpers", "ial-core", "ial-debug-info", "ial-dis", "intcode-ascii"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
