# SPDX-FileCopyrightText: 2026 Eli Array Minkoff
#
# SPDX-License-Identifier: 0BSD

[package]
name = "ial-core"
version = "0.1.0"
edition = "2024"

# don't warn on tarpaulin code coverage cfg conditions or custom cfgs
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tarpaulin_include)']

[dependencies]
