# SPDX-FileCopyrightText: 2026 Eli Array Minkoff
#
# SPDX-License-Identifier: 0BSD

[package]
name = "ial-core"
version = "0.2.0"
authors = ["Eli Array Minkoff"]
description = "ial internals used within ial-ast"
license = "0BSD"
edition = "2024"

# don't warn on tarpaulin code coverage cfg conditions or custom cfgs
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tarpaulin_include)']

[lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

[lints.clippy]
# enable these categories with a negative priority, so that individual lints can
# be overridden
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# some clippy::restriction tests that I want enabled
format_push_string = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
todo = "warn"
same_name_method = "warn"
semicolon_outside_block = "warn"
exit = "deny"
unseparated_literal_suffix = "warn"
redundant_type_annotations = "warn"
field_scoped_visibility_modifiers = "warn"
missing_assert_message = "warn"

[dependencies]
