[package]
name = "ial-dis"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
clap = { version = "4.5.57", features = ["derive"] }
cli-helpers = { version = "0.1.0", path = "../cli-helpers" }
ial = { version = "0.2.0-dev", path = "../ial" }
