[package]
name = "ial-dis"
version = "0.2.0-dev"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
clap = { version = "4.5.57", features = ["derive"] }
ial-cli-helpers = { version = "0.1.0", path = "../ial-cli-helpers" }
ial = { version = "0.2.0-dev", path = "../ial" }
